Fixed chosen overflow issue in reports dialog, added help text for interval selection

--- a/server/public/css/elements.scss
+++ b/server/public/css/elements.scss
@@ -649,3 +649,7 @@ div.editable {
     cursor: pointer;
     float: left;
 }
+
+.ui-dialog {
+    overflow: visible;
+}
