--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -2774,6 +2774,9 @@ div.editable {
   cursor: pointer;
   float: left; }
 
+.ui-dialog {
+  overflow: visible; }
+
 /*
  * Buttons
  */
